Added more icons for iphone 7.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
   <!-- End add this code -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon/">
   <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
-
+  <link rel="shortcut icon" href="icons/icon-128x128.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/icon-120x120.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/icon-114x114.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
