--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <link rel="shortcut icon" href="icons/icon-128x128.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-120x120.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-114x114.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/icon-72x72.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/icon-57x57.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
