Added references to incons for iphone on index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,27 @@
   <link rel="shortcut icon" href="icons/icon-114x114.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-72x72.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-57x57.png" type="image/x-icon">
+
+  <!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/images/icons/icon-152x152.png">
+
+  <!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/images/icons/icon-144x144.png">
+
+  <!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="./assets/images/icons/icon-120x120.png">
+
+  <!-- For iPhone with high-resolution Retina display running iOS ≤ 6: -->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/images/icons/icon-114x114.png">
+
+  <!-- For first- and second-generation iPad: -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./assets/images/icons/icon-72x72.png">
+
+  <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+  <link rel="apple-touch-icon-precomposed" href="./assets/images/icons/icon-57x57.png">
+
+
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
