Added references to incons for iphone on index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <link rel="shortcut icon" href="icons/icon-114x114.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-72x72.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-57x57.png" type="image/x-icon">
+  
 
   <!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/images/icons/icon-152x152.png">
@@ -38,6 +39,8 @@
 
   <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
   <link rel="apple-touch-icon-precomposed" href="./assets/images/icons/icon-57x57.png">
+
+  <link rel="icon" href="./assets/images/icons/icon-32x32.png" sizes="32x32">
 
 
 
