--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
   <title>Budget Tracker</title>
 </head>
 
