Still testing iphone icon issue.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="shortcut icon" href="icons/icon-114x114.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-72x72.png" type="image/x-icon">
   <link rel="shortcut icon" href="icons/icon-57x57.png" type="image/x-icon">
-  
+
 
   <!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/images/icons/icon-152x152.png">
@@ -48,7 +48,8 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
+  <!-- This line of code gets the icon to show up on an iphone -->
+  <!-- <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736"> -->
   <title>Budget Tracker</title>
 </head>
 
