--- a/public/index.html
+++ b/public/index.html
@@ -39,17 +39,14 @@
 
   <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
   <link rel="apple-touch-icon-precomposed" href="./assets/images/icons/icon-57x57.png">
-
   <link rel="icon" href="./assets/images/icons/icon-32x32.png" sizes="32x32">
-
 
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- DONE: add a link to the manifest -->
   <link rel="manifest" href="manifest.webmanifest">
-  <!-- This line of code gets the icon to show up on an iphone -->
-  <!-- <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736"> -->
+  <link rel="canonical" href="https://budget-tracker-das.herokuapp.com/" />
   <title>Budget Tracker</title>
 </head>
 
